[gd_scene load_steps=16 format=3 uid="uid://dqn3g8reiy8kc"]

[ext_resource type="Script" path="res://code/screens/main.gd" id="1_862m1"]
[ext_resource type="PackedScene" uid="uid://bamp35jrqrnh" path="res://code/player/player.tscn" id="1_dkm27"]
[ext_resource type="Texture2D" uid="uid://dgvw4ijxxfp8g" path="res://images/grid.jpg" id="3_8f00t"]
[ext_resource type="PackedScene" uid="uid://cceen7an80ggm" path="res://code/enemies/sniper.tscn" id="3_kdho6"]
[ext_resource type="PackedScene" uid="uid://54p22p6d2w4" path="res://code/enemies/grunt.tscn" id="3_yahs6"]
[ext_resource type="PackedScene" uid="uid://c30xo0su2aa4" path="res://code/enemies/brawler.tscn" id="4_5cubs"]
[ext_resource type="PackedScene" uid="uid://cbwca3duavh8t" path="res://code/enemies/minion.tscn" id="6_h8pj8"]
[ext_resource type="PackedScene" uid="uid://boml0r5ur2kfw" path="res://code/player/health_bar.tscn" id="6_rcq8m"]
[ext_resource type="Script" path="res://code/pause.gd" id="9_6gdki"]
[ext_resource type="PackedScene" uid="uid://clpwuu5ewhadp" path="res://code/droppables/health_orb.tscn" id="10_b7lj1"]
[ext_resource type="AudioStream" uid="uid://cyavrptrrhdlw" path="res://sounds/game_music.wav" id="10_kr7x1"]
[ext_resource type="PackedScene" uid="uid://dtwtd0qa51cnn" path="res://code/enemies/dasher.tscn" id="11_ayldk"]
[ext_resource type="PackedScene" uid="uid://dm3jtw4k40d0e" path="res://code/droppables/AttackPowerUp.tscn" id="13_25wxj"]
[ext_resource type="Script" path="res://code/screens/volume_slider.gd" id="14_d26il"]

[sub_resource type="Environment" id="Environment_epgnu"]
background_mode = 3
glow_enabled = true
glow_levels/1 = 0.34
glow_levels/2 = 1.18
glow_levels/3 = 1.1
glow_levels/4 = 0.23
glow_levels/5 = 0.13
glow_intensity = 1.8
glow_strength = 1.09
glow_bloom = 0.12
glow_blend_mode = 1
glow_hdr_threshold = 0.85

[node name="Main" type="Node"]
process_mode = 1
script = ExtResource("1_862m1")
grunt_scene = ExtResource("3_yahs6")
sniper_scene = ExtResource("3_kdho6")
brawler_scene = ExtResource("4_5cubs")
dasher_scene = ExtResource("11_ayldk")
minion_scene = ExtResource("6_h8pj8")
player_scene = ExtResource("1_dkm27")
healthbar_scene = ExtResource("6_rcq8m")
orb_scene = ExtResource("10_b7lj1")
powerup_scene = ExtResource("13_25wxj")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_epgnu")

[node name="Arena" type="ColorRect" parent="."]
modulate = Color(0.360784, 0.364706, 0.360784, 1)
z_index = -1
z_as_relative = false
offset_right = 3840.0
offset_bottom = 2160.0
color = Color(0.101961, 0.14902, 0.2, 1)

[node name="BackgroundGrid" type="Sprite2D" parent="Arena"]
modulate = Color(0.478431, 0.478431, 0.45098, 0.196078)
position = Vector2(960, 540)
texture = ExtResource("3_8f00t")

[node name="BackgroundGrid2" type="Sprite2D" parent="Arena"]
modulate = Color(0.478431, 0.478431, 0.45098, 0.196078)
position = Vector2(2880, 540)
texture = ExtResource("3_8f00t")

[node name="BackgroundGrid3" type="Sprite2D" parent="Arena"]
modulate = Color(0.478431, 0.478431, 0.45098, 0.196078)
position = Vector2(960, 1620)
texture = ExtResource("3_8f00t")

[node name="BackgroundGrid4" type="Sprite2D" parent="Arena"]
modulate = Color(0.478431, 0.478431, 0.45098, 0.196078)
position = Vector2(2880, 1620)
texture = ExtResource("3_8f00t")

[node name="ColorRect" type="ColorRect" parent="Arena"]
z_index = -1
layout_mode = 0
offset_left = -1918.0
offset_top = -1451.0
offset_right = 6322.0
offset_bottom = 4110.0
color = Color(0.0666667, 0.0823529, 0.101961, 1)

[node name="Border" type="Node2D" parent="."]
modulate = Color(0.890196, 0.937255, 0.980392, 1)
position = Vector2(-20, -20)

[node name="BorderTop" type="ColorRect" parent="Border"]
offset_right = 3880.0
offset_bottom = 20.0

[node name="BorderBottom" type="ColorRect" parent="Border"]
offset_top = 2180.0
offset_right = 3880.0
offset_bottom = 2200.0

[node name="BorderLeft" type="ColorRect" parent="Border"]
offset_right = 20.0
offset_bottom = 2200.0

[node name="Border Right" type="ColorRect" parent="Border"]
offset_left = 3880.0
offset_right = 3900.0
offset_bottom = 2200.0

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_kr7x1")
volume_db = -6.668
bus = &"Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Node2D" parent="CanvasLayer"]

[node name="XPLabel" type="Label" parent="CanvasLayer/HUD"]
modulate = Color(1, 1, 1, 0.32549)
self_modulate = Color(1.2, 1.2, 1.2, 1)
offset_left = 41.0
offset_top = 11.0
offset_right = 510.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 30
text = "XP: 0
"
vertical_alignment = 1

[node name="Pause" type="ColorRect" parent="CanvasLayer"]
process_mode = 3
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.811765)
script = ExtResource("9_6gdki")

[node name="Game Paused" type="Label" parent="CanvasLayer/Pause"]
layout_mode = 0
offset_left = 78.0
offset_top = 396.0
offset_right = 803.0
offset_bottom = 563.0
theme_override_colors/font_color = Color(0.921569, 0.921569, 0.921569, 1)
theme_override_font_sizes/font_size = 80
text = "GAME PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Esc Instruction" type="Label" parent="CanvasLayer/Pause"]
layout_mode = 0
offset_left = 159.0
offset_top = 567.0
offset_right = 595.0
offset_bottom = 637.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 40
text = "Press [Esc] to resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Volume Panel" type="VBoxContainer" parent="CanvasLayer/Pause"]
layout_mode = 0
offset_left = 1019.0
offset_top = 148.0
offset_right = 1732.0
offset_bottom = 893.0
theme_override_constants/separation = 30
alignment = 1

[node name="Master Volume" type="Label" parent="CanvasLayer/Pause/Volume Panel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 40
text = "Master Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master Slider" type="HSlider" parent="CanvasLayer/Pause/Volume Panel"]
layout_mode = 2
max_value = 1.0
step = 0.01
script = ExtResource("14_d26il")
bus_name = "Master"

[node name="Music Volume" type="Label" parent="CanvasLayer/Pause/Volume Panel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 40
text = "Music Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music Slider" type="HSlider" parent="CanvasLayer/Pause/Volume Panel"]
layout_mode = 2
max_value = 1.0
step = 0.01
script = ExtResource("14_d26il")
bus_name = "Music"

[node name="SFX Volume" type="Label" parent="CanvasLayer/Pause/Volume Panel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 40
text = "SFX Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX Slider" type="HSlider" parent="CanvasLayer/Pause/Volume Panel"]
layout_mode = 2
max_value = 1.0
step = 0.01
script = ExtResource("14_d26il")
bus_name = "SFX"

[node name="Button" type="Button" parent="CanvasLayer/Pause"]
offset_left = 171.0
offset_top = 794.0
offset_right = 242.0
offset_bottom = 844.0
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="DeathCamera" type="Camera2D" parent="."]
visible = false
enabled = false

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
[connection signal="pressed" from="CanvasLayer/Pause/Button" to="." method="_on_quit_pressed"]
